# open-transaction-pool

./: .gitignore  .gitmodules  Cargo.toml  README.md  follower.toml
devtools/release/: publish-crates.sh
doc/: layout.md
docs/: layout.md  pool-and-plugin.md  quick-start.md
docs/scenario-application-pattern/: atomic-swap.md  payment.md  swap.md
integration-test/: Cargo.toml  README.md
integration-test/dev_chain/: devnet_config.toml  mercury_devnet_config.toml
integration-test/dev_chain/dev/: ckb.toml
integration-test/dev_chain/dev/specs/: dev.toml
integration-test/dev_chain/dev/specs/cells/: otx-lock  otx-sighash-lock  secp256k1_blake2b_sighash_all_dual
integration-test/src/: const_definition.rs  help.rs  main.rs
integration-test/src/tests/: atomic_swap_ckb_to_udt.rs  atomic_swap_rpc.rs  atomic_swap_udt_to_udt.rs  helper.rs  mod.rs  rpc.rs
integration-test/src/tests/payment/: dust_collector.rs  mod.rs  small_blank_check.rs
integration-test/src/tests/signer/: mod.rs
integration-test/src/tests/swap/: atomic_swap.rs  atomic_swap_ckb_to_udt.rs  atomic_swap_rpc.rs  atomic_swap_udt_to_udt.rs  mod.rs
integration-test/src/tests_omni_lock/: helper.rs  mod.rs  rpc.rs
integration-test/src/tests_omni_lock/payment/: dust_collector.rs
integration-test/src/tests_omni_lock/swap/: atomic_swap.rs  mod.rs
integration-test/src/tests_otx_lock/: atomic_swap.rs  mod.rs
integration-test/src/tests_otx_sighash_lock/: atomic_swap.rs  atomic_swap_rpc.rs  blank_check.rs  mod.rs  rpc.rs  small_blank_check.rs
integration-test/src/utils/: mod.rs
integration-test/src/utils/client/: ckb_cli_client.rs  mercury_client.rs  mod.rs
integration-test/src/utils/client/mercury_client/: mod.rs  types.rs  uints.rs
integration-test/src/utils/instruction/: ckb.rs  command.rs  mercury.rs  mod.rs
integration-test/src/utils/lock/: acp.rs  mod.rs  secp.rs
integration-test/src/utils/signer/: mod.rs  secp.rs
otx-format/: Cargo.toml
otx-format/schemas/: opentx.mol
otx-format/src/: error.rs  lib.rs
otx-format/src/constant/: essential_keys.rs  extra_keys.rs  mod.rs
otx-format/src/jsonrpc_types/: mod.rs  opentx.rs  otx_map.rs  tx_view.rs
otx-format/src/jsonrpc_types/constant/: basic_keys.rs  custom_keys.rs  extra_keys.rs  mod.rs
otx-format/src/types/: mod.rs
otx-format/src/utils/: creator.rs  mod.rs
otx-format/src/verify/: mod.rs
otx-plugin-protocol/: Cargo.toml
otx-plugin-protocol/examples/: demo.rs
otx-plugin-protocol/src/: lib.rs
otx-pool/: Cargo.toml
otx-pool-service/: Cargo.toml
otx-pool-service/src/plugin_extension/: manager.rs  mod.rs
otx-pool-service/src/pool/: mod.rs
otx-pool-service/src/rpc/: impl.rs
otx-pool/src/: cli.rs  error.rs  lib.rs  notify.rs
otx-pool/src/built_in_plugin/: agent_template.rs  atomic_swap.rs  dust_collector.rs  mod.rs  p2p_relayer.rs  signer.rs
otx-pool/src/built_in_plugin/p2p_relayer/: mod.rs  p2p.rs
otx-pool/src/built_in_plugin/signer/: mod.rs  rpc.rs
otx-pool/src/config/: mod.rs  network.rs  script.rs
otx-pool/src/config/built_in_plugins/: dust_collector.rs
otx-pool/src/plugin/: host_service.rs  manager.rs  mod.rs  plugin_proxy.rs  service.rs
otx-pool/src/plugin_extension/: host_service.rs  manager.rs  mod.rs  plugin_proxy.rs
otx-pool/src/pool/: mod.rs  types.rs  verifier.rs
otx-pool/src/rpc/: README.md  impl.rs  mod.rs
otx-sdk/: Cargo.toml
otx-sdk/src/: address.rs  build_tx.rs  lib.rs  signer.rs
otx-sdk/src/client/: otx_pool_client.rs
plugins-built-in/atomic-swap/: Cargo.toml
plugins-built-in/atomic-swap/src/: lib.rs  rpc.rs
plugins-built-in/atomic-udt-swap/: Cargo.toml
plugins-built-in/atomic-udt-swap/src/: lib.rs
plugins-built-in/dust-collector/: Cargo.toml
plugins-built-in/dust-collector/src/: helper.rs  lib.rs
plugins-built-in/signer/: Cargo.toml
plugins-built-in/signer/src/: helper.rs  lib.rs
src/: cli.rs  main.rs
src/configs/: mainnet_config.toml  testnet_config.toml
util/client/: Cargo.toml
util/client/src/: lib.rs  otx_pool_client.rs
util/config/: Cargo.toml
util/config/src/: lib.rs  network.rs
utils/: Cargo.toml
utils/src/: aggregator.rs  build_tx.rs  config.rs  const_definition.rs  lib.rs  wallet.rs
utils/src/client/: ckb_cli_client.rs  ckb_client.rs  mercury_client.rs  mod.rs  otx_pool_client.rs  service_client.rs
utils/src/config/: ckb_config.rs  mod.rs  network.rs  script.rs
utils/src/config/built_in_plugins/: atomic_swap.rs  dust_collector.rs  mod.rs  p2p_relayer.rs  signer.rs
utils/src/const_definition/: devnet.rs  mod.rs
utils/src/instruction/: ckb.rs  command.rs  mercury.rs
utils/src/lock/: acp.rs  mod.rs  omni.rs  secp.rs
utils/src/signer/: mod.rs
