[package]
name = "open-transaction-pool"
version = "0.1.0"
authors = ["Nervos Network"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.1", features = ["derive", "env"] }
ctrlc = "3.2.3"
env_logger = "0.9.3"
log = "0.4.17"

otx-pool-config = { path = "util/config" }
otx-pool = { path = "./otx-pool" }
otx-sdk = { path = "./otx-sdk" }
utils = { path = "./utils" }

atomic-swap = { path = "plugins-built-in/atomic-swap" }
dust-collector = { path = "plugins-built-in/dust-collector"}
signer = { path = "plugins-built-in/signer" }

[workspace]
members = [
    "otx-format",
    "otx-plugin-protocol",
    "otx-pool",
    "otx-sdk",
    "util/client",
    "util/config",
    "utils",

    "plugins-built-in/atomic-swap",
    "plugins-built-in/dust-collector",
    "plugins-built-in/signer",

]
