[package]
name = "open-transaction-pool"
version = "0.1.0"
license = "MIT"
authors = ["Nervos Network"]
edition = "2021"
description = "Open transaction pool is an extensible OTX solution based on memory pool."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.1", features = ["derive", "env"] }
ctrlc = "3.2.3"
env_logger = "0.9.3"
log = "0.4.17"

otx-pool = { path = "./otx-pool", version = "= 0.1.0" }
otx-pool-client = { path = "util/client", version = "= 0.1.0" }
otx-pool-config = { path = "util/config", version = "= 0.1.0" }
otx-sdk = { path = "./otx-sdk", version = "= 0.1.0" }

otx-pool-plugin-atomic-swap = { path = "plugins-built-in/atomic-swap", version = "= 0.1.0" }
otx-pool-plugin-dust-collector = { path = "plugins-built-in/dust-collector", version = "= 0.1.0"}
otx-pool-plugin-signer = { path = "plugins-built-in/signer", version = "= 0.1.0" }

[workspace]
members = [
    "otx-format",
    "otx-plugin-protocol",
    "util/config",
    "otx-sdk",

    "plugins-built-in/atomic-swap",
    "plugins-built-in/dust-collector",
    "plugins-built-in/signer",

    "otx-pool",

    "util/client",
]
