[package]
name = "integration-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.1", features = ["derive"] }
ckb-crypto = "0.108"
ckb-hash = "0.108"
ckb-jsonrpc-types = "0.108"
ckb-sdk = "2.5.0"
ckb-types = "0.108"
env_logger = "0.9.3"
hex = "0.4"
inventory = "0.2"
jsonrpc-core = "18.0"
lazy_static = "1.4.0"
log = "0.4"
once_cell = "1.10"
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
secp256k1 = { version = "0.24", features = ["recovery"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

otx-format = { path = "../otx-format" }
otx-pool = { path = "../otx-pool"}
otx-pool-client = { path = "../util/client" }
otx-pool-config = { path = "../util/config" }
otx-sdk = { path = "../otx-sdk"}

otx-pool-plugin-dust-collector = { path = "../plugins-built-in/dust-collector" }

[workspace]
members = ["."]
