[package]
name = "otx-format"
version = "0.1.0"
license = "MIT"
edition = "2021"
description = "The open transaction format"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
ckb-jsonrpc-types = "0.108"
ckb-sdk = "2.5.0"
ckb-types = "0.108"
derive_more = "0.99"
linked-hash-map = "0.5.6"
molecule = "=0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
