[package]
name = "otx-pool-plugin-protocol"
version = "0.1.0"
edition = "2021"
description = "The open transaction pool plugin protocol"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-types = "0.105"
crossbeam-channel = "0.5.1"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"

otx-format = { path = "../otx-format" }
