[package]
name = "otx-pool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
anyhow = "1.0"
async-trait = "0.1"
ckb-async-runtime = "0.105"
ckb-jsonrpc-types = "0.105"
ckb-sdk = "=2.3.0"
ckb-stop-handler = "0.105"
ckb-types = "0.105"
crossbeam-channel = "0.5.1"
dashmap = "5.4.0"
derive_more = "0.99"
log = "0.4.17"
jsonrpc-core = "18.0"
jsonrpc-derive = "18.0"
jsonrpc-http-server = "18.0"
jsonrpc-server-utils = "18.0"
molecule = "=0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync", "process"] }

otx-format = { path = "../otx-format" }
otx-plugin-protocol = { path = "../otx-plugin-protocol" }
otx-pool-config = { path = "../util/config" }
utils = { path = "../utils" }

dust-collector = { path = "../plugins-built-in/dust-collector" }