[package]
name = "otx-sdk"
version = "0.1.0"
license = "MIT"
edition = "2021"
description = "The open transaction related sdk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
ckb-crypto = "0.108"
ckb-hash = "0.108"
ckb-jsonrpc-types = "0.108"
ckb-sdk = "2.5.0"
ckb-types = "0.108"
jsonrpc-core = "18.0"
secp256k1 = { version = "0.24", features = ["recovery"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

otx-format = { path = "../otx-format", version = "= 0.1.0" }
otx-pool-config = { path = "../util/config", version = "= 0.1.0" }
otx-pool-plugin-protocol = { path = "../otx-plugin-protocol", version = "= 0.1.0" }
