[package]
name = "otx-pool-plugin-atomic-swap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
ckb-jsonrpc-types = "0.105"
ckb-sdk = "2.3.0"
ckb-types = "0.105"
dashmap = "5.4.0"
derive_more = "0.99"
jsonrpc-core = "18.0"
jsonrpc-derive = "18.0"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

otx-format = { path = "../../otx-format" }
otx-pool-config = { path = "../../util/config" }
otx-pool-plugin-protocol = { path = "../../otx-plugin-protocol" }
otx-sdk = { path = "../../otx-sdk" }