[package]
name = "otx-pool-plugin-dust-collector"
version = "0.1.0"
license = "MIT"
edition = "2021"
description = "The open transaction pool plugin dust collector"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
ckb-jsonrpc-types = "0.108"
ckb-sdk = "2.5.0"
ckb-types = "0.108"
dashmap = "5.4.0"
log = "0.4.17"

otx-format = { path = "../../otx-format", version = "= 0.1.0" }
otx-pool-config = { path = "../../util/config", version = "= 0.1.0" }
otx-pool-plugin-protocol = { path = "../../otx-plugin-protocol", version = "= 0.1.0" }
otx-sdk = { path = "../../otx-sdk", version = "= 0.1.0" }
