[package]
name = "otx-pool-plugin-signer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
ckb-jsonrpc-types = "0.105"
ckb-sdk = "=2.3.0"
ckb-types = "0.105"
dashmap = "5.4.0"
log = "0.4.17"
secp256k1 = { version = "0.24", features = ["recovery"] }

otx-format = { path = "../../otx-format" }
otx-pool-config = { path = "../../util/config" }
otx-pool-plugin-protocol = { path = "../../otx-plugin-protocol" }
otx-sdk = { path = "../../otx-sdk" }