[package]
name = "otx-pool-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
ckb-types = "0.105"
jsonrpc-core = "18.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

otx-format = { path = "../../otx-format" }
otx-pool-plugin-atomic-swap = { path = "../../plugins-built-in/atomic-swap" }
otx-pool-plugin-protocol = { path = "../../otx-plugin-protocol" }
