[package]
name = "otx-pool-client"
version = "0.1.0"
license = "MIT"
edition = "2021"
description = "The open transaction pool util client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
ckb-types = "0.108"
jsonrpc-core = "18.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

otx-format = { path = "../../otx-format", version = "= 0.1.0" }
otx-pool-plugin-atomic-swap = { path = "../../plugins-built-in/atomic-swap", version = "= 0.1.0" }
otx-pool-plugin-protocol = { path = "../../otx-plugin-protocol", version = "= 0.1.0" }
