[package]
name = "otx-pool-config"
version = "0.1.0"
edition = "2021"
description = "The open transaction pool util config"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
ckb-jsonrpc-types = "0.108"
ckb-types = "0.108"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
